# laptop-screen-editor

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/core/: cropper.py  image_loader.py  perspective.py  resizer.py  screen_detector.py  screen_editor.py
app/ml/: __init__.py  inference.py
app/pipeline/: processor.py  tasks.py
app/tests/: test_detector.py  test_perspective.py
app/ui/: __init__.py  dialogs.py  image_viewer.py  main_window.py  preview_dialog.py
app/utils/: file_utils.py  geometry.py  logger.py
